<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.evotorapp.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen8"
        android:paddingBottom="@dimen/dimen8"
        android:text="@string/register_message" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen8"
        android:text="@string/api_key" />

    <EditText
        android:id="@+id/etApiKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen8"
        android:paddingBottom="@dimen/dimen8"
        android:hint="@string/enter_api_key" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen8"
        android:paddingBottom="@dimen/dimen8"
        android:text="@string/save_button_text" />

</LinearLayout>
