<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen8"
    android:background="@color/grey5"
    tools:context="ru.evotorapp.NoSlipFragment">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen16"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/no_slip_fragment_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen16"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/no_slip_text1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen16"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="@string/no_slip_text2" />

    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/dimen16"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/ok" />

</RelativeLayout>
