<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey5"
    android:padding="@dimen/dimen8"
    tools:context="ru.evotorapp.StartFragment">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font16"
            android:text="@string/count_basket_items" />

        <TextView
            android:id="@+id/tvCountItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingBottom="@dimen/dimen16"
            android:textSize="@dimen/font40" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font16"
            android:text="@string/total_amount" />

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingBottom="@dimen/dimen16"
            android:textSize="@dimen/font40" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font16"
            android:text="@string/amount_with_discount" />

        <TextView
            android:id="@+id/tvAmountWithDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingBottom="@dimen/dimen16"
            android:textSize="@dimen/font40" />

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnAddDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginBottom="@dimen/dimen8"
            android:padding="@dimen/dimen16"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:text="@string/add_discount_button_text" />

        <Button
            android:id="@+id/btnCreateApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginBottom="@dimen/dimen8"
            android:padding="@dimen/dimen16"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="@string/create_application_button_text" />

        <Button
            android:id="@+id/btnCancelApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen8"
            android:layout_marginBottom="@dimen/dimen8"
            android:padding="@dimen/dimen16"
            android:background="@color/white"
            android:textColor="@color/black"
            android:text="@string/cancel_application_button_text" />

    </LinearLayout>

</RelativeLayout>
