<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen8"
    android:background="@color/grey5"
    tools:context="ru.evotorapp.ConfirmationFragment">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/dimen128"
        android:layout_height="@dimen/dimen128"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/dimen32"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/confirmation" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/font20"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="@string/app_send" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font16"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="@string/receipt_postponed" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/font16"
        android:layout_marginTop="@dimen/dimen8"
        android:layout_marginBottom="@dimen/dimen8"
        android:text="@string/track_status" />

    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/dimen16"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/ok" />

</RelativeLayout>
