<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen8"
    android:background="@color/grey5"
    tools:context="ru.evotorapp.ProductListFragment">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey5">

        <CheckBox
            android:id="@+id/cbDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen16"
            android:paddingLeft="@dimen/dimen12"
            android:textColor="@color/white"
            android:button="@drawable/checkbox_selector"
            android:text="@string/common_discount" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvProducts"
        android:layout_below="@id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelApp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen16"
            android:background="@color/white"
            android:textColor="@color/black"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnCreateApp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen16"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="@string/send_app" />

    </LinearLayout>

</RelativeLayout>
