<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey5"
    tools:context="ru.evotorapp.SlipFragment">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/dimen8" />

        <TextView
            android:id="@+id/tvUuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/dimen8" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/dimen8" />

        <TextView
            android:id="@+id/tvCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="@dimen/dimen8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/slip_content"
            android:layout_margin="@dimen/dimen8" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvProducts"
        android:layout_below="@id/top_layout"
        android:layout_above="@id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen8" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/dimen8"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen16"
            android:background="@color/white"
            android:textColor="@color/black"
            android:text="@string/remove" />

        <Button
            android:id="@+id/btnProcess"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen16"
            android:background="@color/green"
            android:textColor="@color/white"
            android:text="@string/process_slip" />

    </LinearLayout>

</RelativeLayout>
